<resources>
    <string name="app_name">HAXI</string>
    <string name="international_taxi_activity">International Taxi Activity</string>
    <string name="reservation">Reservation</string>
    <string name="reservationCheck">Reservation Confirm</string>
    <string name="fare">Fare</string>
    <string name="serviceInfo">Service Info</string>
    <string name="start">출발지</string>
    <string name="title_activity_end">EndActivity</string>

    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>


    //--------------------명식 수정-----------------------------------

    //activity_main
    <string name="btn_started">시작하기</string>
    <string name="acttext1">반갑습니다. 당신의 택시이용 중 부당요금에 대한</string>
    <string name="acttext2">신고를 편하게 제공해주는 어플리케이션 입니다.</string>
    <string name="acttext3">서비스를 이용하시려면 아래의 시작하기 버튼을 눌러주세요.</string>
    <string name="acttext4">외국인 택시를 이용하려면 International Taxi 를 눌러주세요.</string>

    //activity_uc_main
    <string name="btn_ridecp">탑승완료</string>


    //activity_uc_notify

    //activity_uc_result
    <string name="checking">잘 도착하셨나요?</string>
    <string name="excepting_tex">"예상 요금은                          원 입니다"</string>
    <string name="tex_warning">교통상황에 따라 약간의 차이가 존재할 수 있습니다</string>
    <string name="btn_good">적당해요</string>
    <string name="btn_strage">이상해요</string>

    //activity_uc_running
    <string name="auto_checking">자동으로 움직인 거리를 기록합니다</string>
    <string name="after">추후에 증거자료로 사용될 수 있습니다</string>
    <string name="arrive">목적지에 도착하셨다면 눌러주세요</string>
    <string name="excepting">"예상 택시요금은                             원 입니다"</string>
    <string name="run">"분"</string>
    <string name="run1">""</string>
    <string name="run2">"km"</string>
    <string name="run3">"잠시만 기다려주시면 자동으로 경로를 기록합니다"</string>

    //activity_uc_notify
    <string name="name1">이름</string>
    <string name="name2">휴대폰</string>
    <string name="name3">주소</string>
    <string name="name4">"예시 : 서울시 광진구 광나루로 369 102동 101호 (도로명 주소) "</string>
    <string name="name5">"          (서울시 광진구 군자동 503 102동 101호 (기존 주소)"</string>
    <string name="name6">"           외국인일 경우 현재 숙박중인 주소를 입력하세요"</string>
    <string name="text1">"택시 요금이 너무많은 차이가 난다면"</string>
    <string name="text2">"영수증을 요청하세요"</string>
    <string name="text3">"해당 택시의 부당행위 신고를 도와드리겠습니다"</string>
    <string name="text4">"신고를 위해 몇가지 정보가 필요합니다"</string>
    <string name="smsText">"이름을 입력하세요"</string>
    <string name="edit_phoneNum">"연락처"</string>
    <string name="smsText3">"거주중인 주소를 정확히 입력하세요"</string>
    <string name="btn_next1">"다음"</string>


    //notify2
    <string name="notify2">"영수증이 잘 보이시나요?"</string>
    <string name="tex">"영수증을 요청하시고\n아래의 버튼으로 사진을 촬영하고 수정하세요"</string>
    <string name="re">"다시 찍기"</string>
    <string name="nex">"다음"</string>
    <string name="btn_tex">영수증 촬영</string>
    <string name="texp">"영수증 사진을 촬영해주세요"</string>
    <string name="photop">"경로 캡쳐본을 추가해 주세요"</string>
    <string name="camera">카메라</string>
    <string name="galley">"갤러리</string>
    <string name="btn_dec">신고 문자</string>
    <string name="btn_com">완료</string>
    <string name="korean1">1. 영수증촬영 버튼(사진버튼) 클릭하세요.</string>
    <string name="korean2">2. 영수증 촬영이 완료된 후 문자전송을 클릭하세요.</string>
    <string name="korean3">3. 문자로 넘어간 후 경로캡쳐본을 첨부한 후 전송완료</string>


    //-------------------명식---------------------

    // MainActivity

    <string name="MainText">"핸드폰 번호를 자동으로 입력하기 위해 권한이 필요합니다."</string>
    <string name="MainText1">"현재 위치를 찾기위해 권한이 필요합니다!"</string>
    <string name="MainText2">"왜 거부하셨어요...\n하지만 [설정] > [권한] 에서 권한을 허용할 수 있어요."</string>
    <string name="MainText3">"위치 서비스 설정"</string>
    <string name="MainText4">"무선 네트워크 사용, GPS 위성 사용을 모두 체크하셔야 정확한 위치 서비스가 가능합니다.
                                                   위치 서비스 기능을 설정하시겠습니까?"</string>

    // UcMainActivity
    <string name="UcText1">"도착지 입력하세요"</string>
    <string name="UcText2">"로딩중"</string>
    <string name="UcText3">"완료"</string>
    <string name="UcText4">"지도를 구성하고 있습니다"</string>
    <string name="UcText5">"주소취득 실패"</string>

    // UcNotifyActivity
    <string name="UcNText1">"영수증 촬영을 위한 카메라 권한이 필요해요! 꼭 허락해주세요!"</string>
    <string name="UcNText2">"왜 거부하셨어요...\n하지만 [설정] > [권한] 에서 권한을 허용할 수 있어요."</string>
    <string name="UcNText3">"저는 위 영수증 사진과 같이 왕십리에서 탑승하여 세종대학교에 도착하였으나, 경로를 둘러서 간 것 같으니, 확인 부탁드립니다."</string>
    <string name="UcNText4">"신고자"</string>
    <string name="UcNText5">"연락처"</string>
    <string name="UcNText6">"주소"</string>
    <string name="UcNText7">"모두 입력해 주세요"</string>
    <string name="UcNText8">"주소"</string>
    <string name="UcNText9">"\n뒤로 \n버튼을 한번 더 누르시면 종료됩니다."</string>

    // UcNotifyActivity2
    <string name="UcN2Text1">"영수증 사진을 촬영해 주세요"</string>
    <string name="UcN2Text2">"바가지요금 영수증을 비교할 경로사진을 첨부해주세요."</string>
    <string name="UcN2Text3">"경로 캡쳐본을 추가해주세요"</string>
    <string name="UcN2Text4">"HAXI와 함께\n대한민국 서울에서 즐거운 시간 되시기 바랍니다"</string>

    //activity_uc_notify2
    <string name="notify3">"신고하기 전 확인단계 입니다"</string>
    <string name="notify4">"다음에 실행되는 MMS 창에서 전송버튼을 꼭 눌러주세요.\n핸드폰에서 약간의 비용(SMS,MMS)이 부과될 수 있습니다.\n전에 입력했던 정보들도 활용됩니다.\n확인 버튼을 누르면 다산콜센터(02-120)로 전송됩니다."</string>
    <string name="notify5">"확인"</string>
    <string name="notify6">"취소"</string>
    <string name="notify7">"영수증을 요청하시고\n아래의 버튼으로 사진을 촬영하고 수정하세요"</string>
    <string name="notify8">"종료하기"</string>
    <string name="notify9">"SMS신고는 완료됐습니다.\n보내는곳은 02-112 입니다.\nMMS창에서 전송을 눌러주세요"</string>
    <string name="notify10">"도착지"</string>
</resources>
