<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ensharp.haxi.UcNotifyActivity2">


    <TextView
        android:id="@+id/korean1"
        android:layout_width="wrap_content"
        android:text="@string/korean1"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        />

    <TextView
        android:id="@+id/korean2"
        android:layout_width="wrap_content"
        android:text="@string/korean2"
        android:layout_height="wrap_content"
        android:layout_below="@+id/korean1"
        android:textSize="25dp"
        />

    <TextView
        android:id="@+id/korean3"
        android:layout_width="wrap_content"
        android:text="@string/korean3"
        android:layout_height="wrap_content"
        android:layout_below="@+id/korean2"
        android:textSize="25dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:weightSum="1">


        <Button
            android:id="@+id/btn_image_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:layout_gravity="bottom"
            android:text="@string/btn_tex"/>

        <Button
            android:id="@+id/btn_mms"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_dec"
            android:layout_gravity="bottom" />

        <Button
            android:id="@+id/btn_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_com"
            android:layout_gravity="bottom"
            android:layout_weight="0.44" />
    </LinearLayout>


    <ImageView
        android:id="@+id/img_bitmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />

</RelativeLayout>
