<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/reservation"
        android:id="@+id/reservation_btn"
        android:layout_marginLeft="10dp"
        android:textSize="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/serviceInfo"
        android:textSize="15dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/serviceInfo_btn"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/reservation_btn" />

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/fare"
        android:id="@+id/fare_btn"
        android:layout_below="@+id/reservation_btn"
        android:layout_toStartOf="@+id/serviceInfo_btn" />

    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/reservationCheck"
        android:textSize="16dp"
        android:id="@+id/reservationCheck_btn"
        android:layout_below="@+id/serviceInfo_btn"
        android:layout_alignStart="@+id/serviceInfo_btn" />


    <RelativeLayout
        android:id="@+id/webView_fragment"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/fare_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
