<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sl="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".UcNotifyActivity"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:weightSum="10">

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:layout_weight="3"
        sl:scale_base_width="1080"
        sl:scale_base_height="400" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:text="@string/text1"
            sl:scale_left="0"
            sl:scale_top="100"
            sl:scale_width="1080"
            sl:scale_height="100"
            android:gravity="center"
            sl:scale_textsize="45"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            sl:scale_left="0"
            sl:scale_top="200"
            sl:scale_width="1080"
            sl:scale_height="100"
            android:gravity="center"
            android:textColor="#F95731"
            sl:scale_textsize="50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text3"
            sl:scale_left="0"
            sl:scale_top="300"
            sl:scale_width="1080"
            sl:scale_height="100"
            android:gravity="center"
            sl:scale_textsize="45" />
    </com.ssomai.android.scalablelayout.ScalableLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/notify_guide_text"
        android:id="@+id/imgView_notifyGuideText"
        android:layout_weight="3" />

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:layout_weight="3"
        android:layout_gravity="center_horizontal"
        sl:scale_base_width="1080"
        sl:scale_base_height="600" >

        <TextView
            android:text="@string/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            sl:scale_left="0"
            sl:scale_top="20"
            sl:scale_width="1080"
            sl:scale_height="120"
            sl:scale_textsize="50"/>

        <EditText
            android:id="@+id/smsText"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:hint="@string/smsText"
            android:scrollbars="vertical"
            android:layout_gravity="center_horizontal"
            sl:scale_left="0"
            sl:scale_top="180"
            sl:scale_width="900"
            sl:scale_height="120"
            sl:scale_textsize="50" />

        <EditText
            android:id="@+id/edit_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:gravity="top"
            android:hint="@string/edit_phoneNum"
            android:scrollbars="vertical"
            android:layout_gravity="center_horizontal"
            sl:scale_left="0"
            sl:scale_top="300"
            sl:scale_width="900"
            sl:scale_height="120"
            sl:scale_textsize="50"/>

        <EditText
            android:id="@+id/smsText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/smsText3"
            android:scrollbars="vertical"
            android:layout_gravity="center_horizontal"
            sl:scale_left="0"
            sl:scale_top="420"
            sl:scale_width="900"
            sl:scale_height="120"
            sl:scale_textsize="50"/>
    </com.ssomai.android.scalablelayout.ScalableLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:layout_weight="0.5"/>

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:layout_weight="0.5"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        sl:scale_base_width="900"
        sl:scale_base_height="120" >

        <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:onClick="sendSMS"-->
        <!--android:text="Send"-->
        <!--sl:scale_left="0"-->
        <!--sl:scale_top="50"-->
        <!--sl:scale_width="900"-->
        <!--sl:scale_height="150"-->
        <!--sl:scale_textsize="50" />-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next1"
            android:textColor="#ffffff"
            android:id="@+id/btn_next"
            android:background="@drawable/black_round_button"
            sl:scale_left="0"
            sl:scale_top="0"
            sl:scale_width="900"
            sl:scale_textsize="50" />

    </com.ssomai.android.scalablelayout.ScalableLayout>
</LinearLayout>