<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sl="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.ensharp.haxi.MainActivity"
    android:background="#000000">

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mainactivity_noletter"
        sl:scale_base_width="1080"
        sl:scale_base_height="1730" >

        <com.ensharp.haxi.CustomFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acttext1"
            sl:scale_left="120"
            sl:scale_top="1060"
            sl:scale_width="840"
            sl:scale_height="60"
            sl:scale_textsize="41"
            android:textColor="#FFFFFF"
            android:gravity="center"/>

        <com.ensharp.haxi.CustomFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acttext2"
            sl:scale_left="120"
            sl:scale_top="1120"
            sl:scale_width="840"
            sl:scale_height="60"
            sl:scale_textsize="41"
            android:textColor="#FFFFFF"
            android:gravity="center"/>

        <com.ensharp.haxi.CustomFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acttext3"
            sl:scale_left="20"
            sl:scale_top="1180"
            sl:scale_width="1040"
            sl:scale_height="60"
            sl:scale_textsize="41"
            android:textColor="#FFFFFF"
            android:gravity="center"/>

        <com.ensharp.haxi.CustomFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acttext4"
            sl:scale_left="20"
            sl:scale_top="1240"
            sl:scale_width="1040"
            sl:scale_height="60"
            sl:scale_textsize="41"
            android:textColor="#FFFFFF"
            android:gravity="center"/>

        <Button
            android:text="@string/btn_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_openUcActivity"
            android:background="@drawable/roundedbutton"
            sl:scale_left="200"
            sl:scale_top="1440"
            sl:scale_width="700"
            sl:scale_height="100"
            sl:scale_textsize="40"
            android:textColor="@android:color/white" />

        <Button
            android:text="International Taxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_openInternationalTaxiActivity"
            android:background="@drawable/roundedbutton"
            sl:scale_left="200"
            sl:scale_top="1580"
            sl:scale_width="700"
            sl:scale_height="100"
            sl:scale_textsize="40"
            android:textColor="@android:color/white" />
    </com.ssomai.android.scalablelayout.ScalableLayout>
</RelativeLayout>
